--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>Rachel Schrottman, Student at Northeastern University</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/_layouts">
+		
+		<link rel="stylesheet" type="text/css" href="/css/_layouts">
 	</head>
 	<body>
 		<nav>
