--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Rachel Schrottman!</h1>
 				<p>I am a student at Northeastern University <a href="/about">Read more about my life...</a></p>
+			
+			<a href="rschrottman.github.io/cv.html">View Rachel's Resume</a> 
+			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
