--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>	
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/cv">rschrottman.github.io/cv.html">View Rachel's Resume</a></li>
         		<li><a href="/blog">Blog</a></li>
+			
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Rachel Schrottman!</h1>
 				<p>I am a student at Northeastern University <a href="/about">Read more about my life...</a></p>
-			
-			<a href="rschrottman.github.io/cv.html">View Rachel's Resume</a> 
 			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
