--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>	
-        		<li><a href="/cv">rschrottman.github.io/cv.html">View Rachel's Resume</a></li>
+        		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
 			
     		</ul>
